--- a/projet/src/ModifPatient.form
+++ b/projet/src/ModifPatient.form
@@ -195,6 +195,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtNd_Prenom">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNd_PrenomActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
